--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="">
-                <img src="./images/Logo.svg" alt="">
+                <img src="./images/Logo.svg" alt="Логотим компании Веб-Студио">
             </a>
             <ul>
                 <li>Студия</li>
@@ -32,7 +32,7 @@
 
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <img src="./images/Bg.png" alt="">
+            <img src="./images/Bg.png" alt="Баннер компании Веб-Студио">
             <a href="">Заказать услугу</a>
         </section>
 
@@ -72,17 +72,17 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="" width="370">
+                        <img src="./images/Bg_mini.png" alt="Фотография первой нашей работы" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="" width="370">
+                        <img src="./images/Bg_mini.png" alt="Фотография нашей второй работы" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="" width="370">
+                        <img src="./images/Bg_mini.png" alt="Фотография нашей третьей работы" width="370">
                     </a>
                 </li>
             </ul>
@@ -93,25 +93,25 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="" width="260"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Фотография Игоря Демьяненко" width="260"></a>
                     <a href="">Игорь Демьяненко</a>
                     <P>Product Designer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="" width="260"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Фотография Ольги Репиной" width="260"></a>
                     <a href="">Ольга Репина</a>
                     <P>Product Designer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="" width="260"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Фотография Николая Тарасова" width="260"></a>
                     <a href="">Николай Тарасов</a>
                     <P>Product Designer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="" width="260"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Фотография Михаила Ермакова" width="260"></a>
                     <a href="">Михаил Ермаков</a>
                     <P>Product Designer</P>
                 </li>
@@ -123,7 +123,7 @@
 
     <footer>
         <a href="">
-            <img src="./images/Logo.svg" alt=""> </a>
+            <img src="./images/Logo.svg" alt="Логотим компании Веб-Студио"> </a>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111"> +38 096 111 11 11</a>
     </footer>
