--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="">
-                <img src="./images/Logo.svg" alt="Логотим компании Веб-Студио">
+                <img src="./images/Logo.svg" alt="Логотип компании Веб-Студио">
             </a>
             <ul>
                 <li>Студия</li>
@@ -72,17 +72,17 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="Фотография первой нашей работы" width="370">
+                        <img src="./images/Bg_mini.png" alt="Первая наша работа" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="Фотография нашей второй работы" width="370">
+                        <img src="./images/Bg_mini.png" alt="Вторая наша работа" width="370">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="Фотография нашей третьей работы" width="370">
+                        <img src="./images/Bg_mini.png" alt="Третья наша работа" width="370">
                     </a>
                 </li>
             </ul>
@@ -93,27 +93,27 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Фотография Игоря Демьяненко" width="260"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Игорь Демьяненко" width="260"></a>
                     <a href="">Игорь Демьяненко</a>
                     <P>Product Designer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Фотография Ольги Репиной" width="260"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Ольга Репина" width="260"></a>
                     <a href="">Ольга Репина</a>
-                    <P>Product Designer</P>
+                    <P>Frontend Developer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Фотография Николая Тарасова" width="260"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Николай Тарасов" width="260"></a>
                     <a href="">Николай Тарасов</a>
-                    <P>Product Designer</P>
+                    <P>Marketing</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Фотография Михаила Ермакова" width="260"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Михаил Ермаков" width="260"></a>
                     <a href="">Михаил Ермаков</a>
-                    <P>Product Designer</P>
+                    <P>UI Designe</P>
                 </li>
 
             </ul>
@@ -123,7 +123,7 @@
 
     <footer>
         <a href="">
-            <img src="./images/Logo.svg" alt="Логотим компании Веб-Студио"> </a>
+            <img src="./images/Logo.svg" alt="Логотип компании Веб-Студио"> </a>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111"> +38 096 111 11 11</a>
     </footer>
