--- a/index.html
+++ b/index.html
@@ -122,10 +122,12 @@
     </main>
 
     <footer>
-        <a href="">
-            <img src="./images/Logo.svg" alt="Логотип компании Веб-Студио"> </a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111"> +38 096 111 11 11</a>
+        <a href=""><img src="./images/Logo.svg" alt="Логотип компании Веб-Студио"> </a>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+        </address>
     </footer>
 
 </body>
