--- a/index.html
+++ b/index.html
@@ -41,27 +41,35 @@
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
-                    <p> ipsum dolor sit amet consectetur adipisicing elit. A ducimus nulla nobis modi asperiores. Beatae
-                        non eum, nostrum, velit veritatis cupiditate sit vero odit eaque vitae et repellat ipsum
-                        aliquam.</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit explicabo expedita
+                        impedit
+                        architecto officiis quidem reprehenderit enim dolore, mollitia cum assumenda similique sit,
+                        aperiam blanditiis
+                        quos nisi dicta delectus.</p>
                 </li>
                 <li>
                     <h3>Пунктуальность</h3>
-                    <p> ipsum dolor sit amet consectetur adipisicing elit. A ducimus nulla nobis modi asperiores. Beatae
-                        non eum,
-                        nostrum, velit veritatis cupiditate sit vero odit eaque vitae et repellat ipsum aliquam.</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit explicabo expedita
+                        impedit
+                        architecto officiis quidem reprehenderit enim dolore, mollitia cum assumenda similique sit,
+                        aperiam blanditiis
+                        quos nisi dicta delectus.</p>
                 </li>
                 <li>
                     <h3>Планирование</h3>
-                    <p> ipsum dolor sit amet consectetur adipisicing elit. A ducimus nulla nobis modi asperiores. Beatae
-                        non eum,
-                        nostrum, velit veritatis cupiditate sit vero odit eaque vitae et repellat ipsum aliquam.</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit explicabo expedita
+                        impedit
+                        architecto officiis quidem reprehenderit enim dolore, mollitia cum assumenda similique sit,
+                        aperiam blanditiis
+                        quos nisi dicta delectus.</p>
                 </li>
                 <li>
                     <h3>Современные технологии</h3>
-                    <p> ipsum dolor sit amet consectetur adipisicing elit. A ducimus nulla nobis modi asperiores. Beatae
-                        non eum,
-                        nostrum, velit veritatis cupiditate sit vero odit eaque vitae et repellat ipsum aliquam.</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit explicabo expedita
+                        impedit
+                        architecto officiis quidem reprehenderit enim dolore, mollitia cum assumenda similique sit,
+                        aperiam blanditiis
+                        quos nisi dicta delectus.</p>
                 </li>
 
             </ul>
@@ -126,8 +134,9 @@
         <address>
             г. Киев, пр-т Леси Украинки, 26
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
+
     </footer>
 
 </body>
