--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <footer>
         <a href=""><img src="./images/Logo.svg" alt="Логотип компании Веб-Студио"> </a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            г. Киев, пр-т Леси Украинки, 26<br/>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br/>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
 
