Установил размеры для фото

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <img src="./images/Bg.png" alt="Баннер компании Веб-Студио">
+            <img src="./images/Bg.png" alt="Баннер компании Веб-Студио" width="1600" height="600">
             <a href="">Заказать услугу</a>
         </section>
 
+        <!--Наши преимущества-->
         <section>
             <h2>Наши преимущества</h2>
             <ul>
@@ -75,51 +76,52 @@
             </ul>
         </section>
 
+        <!--Чем мы занимаемся-->
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="Первая наша работа" width="370">
+                        <img src="./images/Bg_mini.png" alt="Первая наша работа" width="370" height="294">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="Вторая наша работа" width="370">
+                        <img src="./images/Bg_mini.png" alt="Вторая наша работа" width="370" height="294">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/Bg_mini.png" alt="Третья наша работа" width="370">
+                        <img src="./images/Bg_mini.png" alt="Третья наша работа" width="370" height="294">
                     </a>
                 </li>
             </ul>
         </section>
 
+        <!-- Наша команда-->
         <section>
-
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Игорь Демьяненко" width="270"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Игорь Демьяненко" width="270" height="260"></a>
                     <a href="">Игорь Демьяненко</a>
                     <P>Product Designer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Ольга Репина" width="270"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Ольга Репина" width="270" height="260"></a>
                     <a href="">Ольга Репина</a>
                     <P>Frontend Developer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Николай Тарасов" width="270"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Николай Тарасов" width="270" height="260"></a>
                     <a href="">Николай Тарасов</a>
                     <P>Marketing</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Михаил Ермаков" width="270"></a>
+                    <a href=""><img src="./images/Bg_mini2.png" alt="Михаил Ермаков" width="270" height="260"></a>
                     <a href="">Михаил Ермаков</a>
                     <P>UI Designe</P>
                 </li>
@@ -129,11 +131,12 @@
 
     </main>
 
+    <!--Футер-->
     <footer>
         <a href=""><img src="./images/Logo.svg" alt="Логотип компании Веб-Студио"> </a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26<br/>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br/>
+            г. Киев, пр-т Леси Украинки, 26<br />
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
 
