Исправления согласно ТЗ

--- a/index.html
+++ b/index.html
@@ -11,29 +11,28 @@
 <body>
     <header>
         <nav>
-            <a href="">
-                <img src="./images/Logo.svg" alt="Логотип компании Веб-Студио">
-            </a>
-            <ul>
-                <li>Студия</li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
-            </ul>
+            <a href="#">WebStudio</a>
+            <!--<img src="./images/Logo.svg" alt="Логотип компании Веб-Студио">-->
 
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                <li><a href="#">Студия</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
-    </header>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+        </ul>
 
+    </header>
     <!--Герой-->
     <main>
 
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <img src="./images/Bg.png" alt="Баннер компании Веб-Студио" width="1600" height="600">
-            <a href="">Заказать услугу</a>
+            <button type="button">Заказать услугу</button>
         </section>
 
         <!--Наши преимущества-->
@@ -42,37 +41,20 @@
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit explicabo expedita
-                        impedit
-                        architecto officiis quidem reprehenderit enim dolore, mollitia cum assumenda similique sit,
-                        aperiam blanditiis
-                        quos nisi dicta delectus.</p>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции..</p>
                 </li>
                 <li>
                     <h3>Пунктуальность</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit explicabo expedita
-                        impedit
-                        architecto officiis quidem reprehenderit enim dolore, mollitia cum assumenda similique sit,
-                        aperiam blanditiis
-                        quos nisi dicta delectus.</p>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <h3>Планирование</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit explicabo expedita
-                        impedit
-                        architecto officiis quidem reprehenderit enim dolore, mollitia cum assumenda similique sit,
-                        aperiam blanditiis
-                        quos nisi dicta delectus.</p>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3>Современные технологии</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit explicabo expedita
-                        impedit
-                        architecto officiis quidem reprehenderit enim dolore, mollitia cum assumenda similique sit,
-                        aperiam blanditiis
-                        quos nisi dicta delectus.</p>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
-
             </ul>
         </section>
 
@@ -81,18 +63,23 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <a href="">
-                        <img src="./images/Bg_mini.png" alt="Первая наша работа" width="370" height="294">
+                    <a href="#">
+                        <img src="./images/close-up-image-programer-working-his-desk-office.jpg"
+                            alt="Крупный план программиста работающего за рабочем столом" width="370" height="294">
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/Bg_mini.png" alt="Вторая наша работа" width="370" height="294">
+                    <a href="#">
+                        <img src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones.jpg"
+                            alt="веб-дизайнер разрабатывает приложение для смартфонов и рабочий интерфейс для мобильных телефонов"
+                            width="370" height="294">
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/Bg_mini.png" alt="Третья наша работа" width="370" height="294">
+                    <a href="#">
+                        <img src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet.jpg"
+                            alt="креативный художник веб-дизайна на графическом планшете подбирает необходимый цвет дизайна"
+                            width="370" height="294">
                     </a>
                 </li>
             </ul>
@@ -100,48 +87,49 @@
 
         <!-- Наша команда-->
         <section>
+
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Игорь Демьяненко" width="270" height="260"></a>
-                    <a href="">Игорь Демьяненко</a>
+                    <a href="#"><img src="./images/igor_demyanenko.jpg" alt="Игорь Демьяненко" width="270" height="260"></a>
+                    <a href="#">Игорь Демьяненко</a>
                     <P>Product Designer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Ольга Репина" width="270" height="260"></a>
-                    <a href="">Ольга Репина</a>
+                    <a href="#"><img src="./images/olga_repina.jpg" alt="Ольга Репина" width="270" height="260"></a>
+                    <a href="#">Ольга Репина</a>
                     <P>Frontend Developer</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Николай Тарасов" width="270" height="260"></a>
-                    <a href="">Николай Тарасов</a>
+                    <a href="#"><img src="./images/nikolay_tarasov.jpg" alt="Николай Тарасов" width="270"
+                            height="260"></a>
+                    <a href="#">Николай Тарасов</a>
                     <P>Marketing</P>
                 </li>
 
                 <li>
-                    <a href=""><img src="./images/Bg_mini2.png" alt="Михаил Ермаков" width="270" height="260"></a>
-                    <a href="">Михаил Ермаков</a>
+                    <a href="#"><img src="./images/mikhail_ermakov.jpg" alt="Михаил Ермаков" width="270"
+                            height="260"></a>
+                    <a href="#">Михаил Ермаков</a>
                     <P>UI Designe</P>
                 </li>
-
             </ul>
-        </section>
 
+        </section>
     </main>
 
     <!--Футер-->
     <footer>
-        <a href=""><img src="./images/Logo.svg" alt="Логотип компании Веб-Студио"> </a>
+        <a href="#">WebStudio</a>
+        <!--<img src="./images/Logo.svg" alt="Логотип компании Веб-Студио">-->
         <address>
             г. Киев, пр-т Леси Украинки, 26<br />
             <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
-
     </footer>
-
 </body>
 
 </html>
