--- a/index.html
+++ b/index.html
@@ -93,27 +93,27 @@
                 <li>
                     <a href="#"><img src="./images/igor_demyanenko.jpg" alt="Игорь Демьяненко" width="270" height="260"></a>
                     <a href="#">Игорь Демьяненко</a>
-                    <P>Product Designer</P>
+                    <p>Product Designer</p>
                 </li>
 
                 <li>
                     <a href="#"><img src="./images/olga_repina.jpg" alt="Ольга Репина" width="270" height="260"></a>
                     <a href="#">Ольга Репина</a>
-                    <P>Frontend Developer</P>
+                    <p>Frontend Developer</p>
                 </li>
 
                 <li>
                     <a href="#"><img src="./images/nikolay_tarasov.jpg" alt="Николай Тарасов" width="270"
                             height="260"></a>
                     <a href="#">Николай Тарасов</a>
-                    <P>Marketing</P>
+                    <p>Marketing</p>
                 </li>
 
                 <li>
                     <a href="#"><img src="./images/mikhail_ermakov.jpg" alt="Михаил Ермаков" width="270"
                             height="260"></a>
                     <a href="#">Михаил Ермаков</a>
-                    <P>UI Designe</P>
+                    <p>UI Designe</p>
                 </li>
             </ul>
 
