--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <header>
         <nav>
             <a href="#">WebStudio</a>
-            <!--<img src="./images/Logo.svg" alt="Логотип компании Веб-Студио">-->
 
             <ul>
                 <li><a href="#">Студия</a></li>
@@ -91,7 +90,8 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <a href="#"><img src="./images/igor_demyanenko.jpg" alt="Игорь Демьяненко" width="270" height="260"></a>
+                    <a href="#"><img src="./images/igor_demyanenko.jpg" alt="Игорь Демьяненко" width="270"
+                            height="260"></a>
                     <a href="#">Игорь Демьяненко</a>
                     <p>Product Designer</p>
                 </li>
@@ -123,11 +123,13 @@
     <!--Футер-->
     <footer>
         <a href="#">WebStudio</a>
-        <!--<img src="./images/Logo.svg" alt="Логотип компании Веб-Студио">-->
         <address>
-            г. Киев, пр-т Леси Украинки, 26<br />
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            г. Киев, пр-т Леси Украинки, 26
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+            </ul>
+
         </address>
     </footer>
 </body>
