--- a/index.html
+++ b/index.html
@@ -62,34 +62,28 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <a href="#">
-              <img
-                src="./images/close-up-image-programer-working-his-desk-office.jpg"
-                alt="Крупный план программиста работающего за рабочем столом"
-                width="370"
-                height="294"
-              />
-            </a>
+            <img
+              src="./images/close-up-image-programer-working-his-desk-office.jpg"
+              alt="Программист за столом"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <a href="#">
-              <img
-                src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones.jpg"
-                alt="веб-дизайнер разрабатывает приложение для смартфонов и рабочий интерфейс для мобильных телефонов"
-                width="370"
-                height="294"
-              />
-            </a>
+            <img
+              src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones.jpg"
+              alt="Веб-дизайнер с мобильным телефоном"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <a href="#">
-              <img
-                src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet.jpg"
-                alt="креативный художник веб-дизайна на графическом планшете подбирает необходимый цвет дизайна"
-                width="370"
-                height="294"
-              />
-            </a>
+            <img
+              src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet.jpg"
+              alt="Веб-дизайнер с графическим планшетом"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -142,7 +136,7 @@
         г. Киев, пр-т Леси Украинки, 26
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
